# j3d

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
icon/: j3d.icns
imgui_sdl/: imgui_impl_sdlrenderer.cpp  imguifilesystem.cpp
j3d/: CMakeLists.txt  camera.cpp  camera.h  canvas.cpp  canvas.h  db.cpp  db.h  gltf.cpp  gltf.h  io.cpp  io.h  j3d.rc  keyboard.h  main.cpp  matcap.cpp  matcap.h  mesh.cpp  mesh.h  mouse.h  pc.cpp  pc.h  pixel.cpp  pixel.h  pref_file.cpp  pref_file.h  scene.cpp  scene.h  settings.cpp  settings.h  trackball.c  trackball.h  view.cpp  view.h  vox.cpp  vox.h
tinygltf/: tiny_gltf.h
